examples/test/testpolicy6840.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6840
  namespace: namespace25
spec:
  podSelector:
    matchLabels:
      key36: value37
      key37: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value37
          key8: value27
      podSelector:
        matchLabels:
          key34: value11
          key18: value39
          key30: value40
